--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -1,3 +1,36 @@
-FROM quay.io/qiime2/metagenome:2024.10
+name: Build & Publish Docker Image
+on:
+  release:
+    types: [published]
 
-RUN pip install ipython ipykernel matplotlib
+jobs:
+  push-to-dockerhub:
+    runs-on: ubuntu-latest
+    permissions:
+      packages: write
+      contents: read
+    steps:
+      - uses: actions/checkout@v4
+      - name: Login to Dockerhub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ vars.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_PASSWORD }}
+
+      - name: Extract Metadata
+        id: metadata
+        uses: docker/metadata-action@v4
+        with:
+          images: |
+            tuftsttsrt/qiime2-metagenome
+          tags: 2024.10
+      - name: Build & Publish Docker Image
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          file: ./Dockerfile
+          push: true
+          tags: ${{ steps.metadata.outputs.tags }}
+          labels: ${{ steps.metadata.outputs.labels }}
+          build-args: |
+            GPAT=${{ secrets.GPAT }}
