--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -23,7 +23,7 @@ jobs:
         with:
           images: |
             tuftsttsrt/qiime2-metagenome
-          tags: 2024.10
+          tags: type=semver,pattern={{version}}
       - name: Build & Publish Docker Image
         uses: docker/build-push-action@v5
         with:
